--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   background-color: #d8d5d5;
+  padding: 20px;
 }
 
 #heading {
