--- a/index.css
+++ b/index.css
@@ -5,9 +5,46 @@
 }
 body {
   background-color: #d8d5d5;
-  padding: 20px;
 }
 
-#heading {
-  color: red;
+.header {
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px 0 50px;
+  background-color: rgb(176, 171, 171);
+}
+.logo {
+  height: 48px;
+  border-radius: 50%;
+}
+.nav-items ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+  gap: 50px;
+  font-size: 20px;
+  font-style: bold;
+}
+.nav-items ul li {
+  cursor: pointer;
+}
+
+.res-card {
+  height: 200px;
+  width: 200px;
+  background-color: white;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+}
+.res-image img {
+  height: 100px;
+  width: 100%;
+  object-fit: cover;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
 }
