--- a/index.css
+++ b/index.css
@@ -52,9 +52,9 @@ body {
   justify-content: center;
 }
 
-.filter-button {
+.filter-button,
+.search-btn {
   cursor: pointer;
-  margin: 10px;
   padding: 5px;
   background: rgb(67, 133, 171);
   color: white;
@@ -69,12 +69,19 @@ body {
   padding-top: 50px;
 }
 .shimmer-card {
-  height: 250px;
+  height: 270px;
   width: 250px;
   margin: 10px;
   background: white;
   border-radius: 20px;
-  animation: shimmer 700ms infinite;
+  padding: 10px;
+  animation: shimmer 3s infinite;
+}
+.shimmer-image {
+  height: 100px;
+  width: 100%;
+  background: #bebbbb;
+  border-radius: 20px;
 }
 
 @keyframes shimmer {
@@ -93,4 +100,78 @@ body {
   100% {
     opacity: 0%;
   }
+}
+#auth-button {
+  padding: 5px;
+  background-color: black;
+  color: white;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.filter {
+  display: flex;
+  gap: 20px;
+  margin: 10px;
+}
+.search {
+  display: flex;
+  gap: 10px;
+}
+.filter input {
+  padding: 2px;
+  outline: none;
+}
+
+.fake-store-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+  flex-wrap: wrap;
+}
+.search-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 80px;
+  align-items: center;
+}
+.search-container input {
+  padding: 15px;
+  width: 300px;
+  border-radius: 20px;
+  outline: none;
+  margin-right: 10px;
+  border-color: red;
+}
+.search-container button {
+  padding: 15px;
+  border-color: red;
+  background-color: blueviolet;
+  color: white;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.product-container {
+  border-top: 1px solid red;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+.product-card {
+  width: 250px;
+  border-radius: 20px;
+  background-color: whitesmoke;
+  padding: 5px;
+  border: 2px solid rgb(96, 96, 121);
+}
+.product-card img {
+  height: 200px;
+  width: 100%;
+  object-fit: contain;
+  border-radius: 20px;
+  margin-bottom: 5px;
 }
