--- a/index.css
+++ b/index.css
@@ -1,67 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  background-color: #d8d5d5;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.header {
-  height: 70px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 50px 0 50px;
-  background-color: rgb(176, 171, 171);
-}
-.logo {
-  height: 48px;
-  border-radius: 50%;
-}
-.nav-items ul {
-  display: flex;
-  list-style: none;
-  justify-content: space-evenly;
-  gap: 50px;
-  color: white;
-  font-size: 18px;
-  font-style: bold;
-}
-.nav-items ul li {
-  cursor: pointer;
-  color: black;
-}
-
-.res-card {
-  background-color: white;
-  width: 250px;
-  padding: 10px;
-  margin: 10px;
-  cursor: pointer;
-  border-radius: 20px;
-}
-.res-image img {
-  height: 150px;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 20px;
-}
-.res-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.filter-button,
-.search-btn {
-  cursor: pointer;
-  padding: 5px;
-  background: rgb(67, 133, 171);
-  color: white;
-  outline: none;
-  border: none;
-}
 .card-container {
   display: flex;
   flex-wrap: wrap;
@@ -172,7 +112,7 @@ hr {
   border-radius: 20px;
   background-color: whitesmoke;
   padding: 5px;
-  border: 2px solid rgb(96, 96, 121);
+  border: 1px solid rgb(96, 96, 121);
 }
 .product-card img {
   height: 200px;
